[package]
name = "geojson_to_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.0"
clap-cargo = "0.10.0"
geojson = "0.24.0"
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
